--- a/aspnet-core/src/GameRepository.HttpApi/GameRepository.HttpApi.csproj
+++ b/aspnet-core/src/GameRepository.HttpApi/GameRepository.HttpApi.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <Import Project="..\..\common.props" />
 
@@ -20,6 +20,7 @@
 
 
   <ItemGroup>
+    <ProjectReference Include="..\GameRepository.Application.Contracts\GameRepository.Application.Contracts.csproj" />
     <ProjectReference Include="..\GameRepository.Domain.Shared\GameRepository.Domain.Shared.csproj" />
   </ItemGroup>
 
